# htvend

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Dockerfile.githubaction  Dockerfile.offlinebuild  MODULE.bazel  Makefile  NOTICE  README.md  assets.json  bootstrap.json  concourse-helm-repo.json  deps.bzl  e2e-bazel-test.sh  go.mod  go.sum  helm.json  k3s-running.md  license.yml  oci-image-building.md  rancher-images.json  rancher.json
.github/: dependabot.yml
.github/workflows/: go.yml  offline-dependencies-check.yml  offline-dependencies-rebuild.yml  offline-dependencies.yml
cli/: Dockerfile  Makefile  assets.json  go.mod  go.sum
cli/cmd/download-image/: download_image_main.go
cli/internal/app/: run_subprocess.go
cli/internal/blobstore/: store.go
cli/internal/blobstore/directory/caf/: caf_test.go
cli/internal/blobstore/registry/: reg_store.go
cli/internal/blobstore/s3store/: s3_store.go
cli/internal/htvend/: command_verify.go  environment_tmp_dirs.go  flags_listener.go  flags_manifest.go
cli/internal/registryauthclient/: wrapping_registry_auth_client.go
cli/scripts/: build-img-with-proxy
cmd/download-image/: BUILD.bazel  download_image_main.go
cmd/htvend/: BUILD.bazel  main.go
cmd/pem2jks/: pem2jks-main.go
cmd/with-java-keystore/: with-java-keystore-main.go
cmd/with-temp-dir/: with-temp-dir-main.go
docs/: bazel.md  cli.md  getting-started.md  k3s-running.md  oci-image-building.md
examples/: .bazelrc  .gitignore  .tweag-credential-helper.json  MODULE.bazel
examples/alpine-img/: BUILD.bazel  Dockerfile  assets.json  blobs.yml
examples/java-spring-img/: BUILD.bazel  Dockerfile  Makefile  assets.json  blobs.yml
examples/python3-img/: BUILD.bazel  Dockerfile  Makefile  assets.json  blobs.yml
examples/ubuntu-img/: BUILD.bazel  Makefile  assets.json  blobs.yml
experimental/: README.md  offline-dependencies.yml
internal/app/: BUILD.bazel  flags_all.go  run_subprocess.go  run_with_flags.go  run_with_interrupt.go  with_temp_dir.go
internal/blobs/: directory_store.go  store.go
internal/blobs/directory/: directory_store.go
internal/blobstore/: BUILD.bazel  store.go
internal/blobstore/directory/: BUILD.bazel  directory_store.go
internal/blobstore/directory/caf/: BUILD.bazel  caf.go
internal/blobstore/registry/: BUILD.bazel  reg_store.go
internal/blobstore/s3store/: BUILD.bazel  s3_store.go
internal/caf/: caf.go  caf_test.go
internal/htvend/: BUILD.bazel  command_build.go  command_clean.go  command_export.go  command_import.go  command_offline.go  command_verify.go  environment_buildah.go  environment_http_proxy.go  environment_jks_keystore_file.go  environment_jks_truststore.go  environment_mvn_settings.go  environment_ssl_cert_file.go  flags_all.go  flags_listener.go  flags_manifest.go
internal/jobs/: BUILD.bazel  multitasker.go
internal/lockfile/: BUILD.bazel  lock_file.go
internal/proxyserver/: BUILD.bazel  http_proxy.go
internal/re/: BUILD.bazel  multi_regexp.go  re_test.go
internal/registryauthclient/: BUILD.bazel
offline-img-builder/: BUILD.bazel  apko.lock.json  apko.yaml
rules/: BUILD.bazel  MODULE.bazel  blobs_dir_repository.bzl  blobs_info.bzl  blobs_repository.bzl  blobs_s3_repository.bzl  defs.bzl  image.bzl  lock.bzl
rules_htvend/: blobs_repository.bzl  image.bzl  lock.bzl
scripts/: BUILD.bazel  build-img-with-proxy  htvend-buildah-build  run-k3s-server
