module(
    name = "htvend",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_apko", version = "1.5.37")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "rules_img", version = "0.3.12")
bazel_dep(name = "tweag-credential-helper", version = "0.0.9")

######################
# Golang boilerplate #
######################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_adrg_xdg", "com_github_aws_aws_sdk_go_v2", "com_github_aws_aws_sdk_go_v2_config", "com_github_aws_aws_sdk_go_v2_service_s3", "com_github_containers_image_v5", "com_github_danjacques_gofslock", "com_github_gboddin_go_www_authenticate_parser", "com_github_hashicorp_go_multierror", "com_github_jessevdk_go_flags", "com_github_opencontainers_go_digest", "com_github_prometheus_client_golang", "com_github_sirupsen_logrus", "com_github_stretchr_testify", "com_sslmate_software_src_go_pkcs12")

####################
# Apko boilerplate #
####################
toolchain = use_extension("@rules_apko//apko:extensions.bzl", "apko")
toolchain.toolchain(apko_version = "v1.1.12")
use_repo(toolchain, "apko_toolchains")

register_toolchains("@apko_toolchains//:all")

apk = use_extension("@rules_apko//apko:extensions.bzl", "apko")
apk.translate_lock(
    name = "wolfi_base_lock",
    lock = "//offline-img-builder:apko.lock.json",
)
use_repo(apk, "wolfi_base_lock")

######################
# htvend boilerplate #
######################
htvend_blobs_repository = use_repo_rule("//rules_htvend:blobs_repository.bzl", "htvend_blobs_repository")

htvend_blobs_repository(
    name = "alpine_img_blobs",
    assets_json = "//examples/alpine-img:assets.json",
    s3_bucket = "htvend-demo-001",
    s3_prefix = "blobs/",
)

htvend_blobs_repository(
    name = "java_spring_img_blobs",
    assets_json = "//examples/java-spring-img:assets.json",
    s3_bucket = "htvend-demo-001",
    s3_prefix = "blobs/",
)

htvend_blobs_repository(
    name = "python3_img_blobs",
    assets_json = "//examples/python3-img:assets.json",
    s3_bucket = "htvend-demo-001",
    s3_prefix = "blobs/",
)

htvend_blobs_repository(
    name = "ubuntu_img_blobs",
    assets_json = "//examples/ubuntu-img:assets.json",
    s3_bucket = "htvend-demo-001",
    s3_prefix = "blobs/",
)
