module(
    name = "htvend_examples",
    version = "0.0.0",
)

# These examples consume rules_htvend exactly as an external project would. During
# development we resolve it from the sibling directory; a real consumer would use a
# git_override / archive_override (or the Bazel Central Registry once published).
bazel_dep(name = "rules_htvend", version = "0.0.0")
local_path_override(
    module_name = "rules_htvend",
    path = "../rules",
)

htvend_blobs_dir_repository = use_repo_rule("@rules_htvend//:blobs_dir_repository.bzl", "htvend_blobs_dir_repository")

# All of these examples use the directory backend: blobs come from a local directory (no
# S3, no credentials). With no blobs_dir, they default to the local htvend cache at
# ${XDG_DATA_HOME:-$HOME/.local/share}/htvend/cache/blobs (override with the blobs_dir
# attribute or the HTVEND_BLOBS_DIR env var). See ../docs/bazel.md for the S3 backend.
htvend_blobs_dir_repository(
    name = "alpine_img_blobs",
    assets_json = "//alpine-img:assets.json",
)

htvend_blobs_dir_repository(
    name = "python3_img_blobs",
    assets_json = "//python3-img:assets.json",
)

htvend_blobs_dir_repository(
    name = "ubuntu_img_blobs",
    assets_json = "//ubuntu-img:assets.json",
)

htvend_blobs_dir_repository(
    name = "java_spring_img_blobs",
    assets_json = "//java-spring-img:assets.json",
)

htvend_blobs_dir_repository(
    name = "ruby_img_blobs",
    assets_json = "//ruby-img:assets.json",
)
