# rules_htvend: reusable Bazel rules for building OCI images offline with htvend.
#
# Public entry points (load from another module as @rules_htvend//:<file>):
#   defs.bzl                 -> htvend_image  (the combined macro most consumers use)
#   image.bzl                -> htvend_image_build         (offline build, advanced)
#   lock.bzl                 -> htvend_lock                (lock run target, advanced)
#   blobs_s3_repository.bzl  -> htvend_blobs_s3_repository   (S3 backend)
#   blobs_dir_repository.bzl -> htvend_blobs_dir_repository  (local directory backend)
#   blobs_info.bzl           -> HtvendBlobsInfo / htvend_blobs_info (internal, used by the
#                                generated BUILD.bazel of the two backends above)

load(":image.bzl", "exec_mode_flag")

exports_files([
    "defs.bzl",
    "image.bzl",
    "lock.bzl",
    "blobs_s3_repository.bzl",
    "blobs_dir_repository.bzl",
    "blobs_info.bzl",
])

# Execution mode for the offline build. Override with
#   --@rules_htvend//:exec_mode=direct
# "podman" (default) runs the tool image via podman (local-only); "direct" runs the
# tools straight from PATH (sandbox- and RBE-eligible). See docs/bazel.md.
exec_mode_flag(
    name = "exec_mode",
    build_setting_default = "podman",
    visibility = ["//visibility:public"],
)
