load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/continusec/htvend/cmd/htvend",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app",
        "//internal/htvend",
    ],
)

go_binary(
    name = "bin",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
