load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates two targets:
#   //alpine-img:image       (bazel build) -- OCI image, built offline
#   //alpine-img:image.lock  (bazel run)   -- capture assets, write assets.json
#
# Fully local flow: no s3_bucket, so the lock stores blobs in the local htvend cache,
# read back via the directory backend (@alpine_img_blobs, see //:MODULE.bazel).
htvend_image(
    name = "image",
    blobs = "@alpine_img_blobs//:blobs",
)
