load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates //java-spring-img:image (bazel build) and //java-spring-img:image.lock (run).
# Demonstrates passing env vars into the build (previously done via a Makefile): these
# tell build-img-with-proxy where to mount the CA truststore and the maven proxy
# settings inside the RUN containers.
htvend_image(
    name = "image",
    blobs = "@java_spring_img_blobs//:blobs",
    env = {
        "JKS_KEYSTORE_PATH": "/usr/lib/jvm/java-21-amazon-corretto/lib/security/cacerts",
        "MVN_SETTINGS_PATH": "/usr/share/maven/conf/settings.xml",
    },
)
