load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates //python3-img:image (bazel build) and //python3-img:image.lock (bazel run).
# Directory backend: blobs are read from / exported to the local htvend cache (see
# @python3_img_blobs in //:MODULE.bazel).
htvend_image(
    name = "image",
    blobs = "@python3_img_blobs//:blobs",
)
