load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates //ubuntu-img:image (bazel build) and //ubuntu-img:image.lock (bazel run).
# Blobs are stored locally and also exported to S3 (read back via @ubuntu_img_blobs).
htvend_image(
    name = "image",
    blobs = "@ubuntu_img_blobs//:blobs",
    s3_bucket = "htvend-demo-001",
    s3_prefix = "blobs/",
)
