load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates //ubuntu-img:image (bazel build) and //ubuntu-img:image.lock (bazel run).
# Blobs are stored locally and also exported to S3 (the bucket/prefix come from
# @ubuntu_img_blobs's own :blobs_info, matching its htvend_blobs_repository config).
htvend_image(
    name = "image",
    blobs = "@ubuntu_img_blobs//:blobs",
)
