load("@rules_htvend//:defs.bzl", "htvend_image")

# Creates //ubuntu-img:image (bazel build) and //ubuntu-img:image.lock (bazel run).
# Directory backend: blobs are read from / exported to the local htvend cache (see
# @ubuntu_img_blobs in //:MODULE.bazel).
htvend_image(
    name = "image",
    blobs = "@ubuntu_img_blobs//:blobs",
)
