load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "htvend",
    srcs = [
        "command_build.go",
        "command_export.go",
        "command_offline.go",
        "command_verify.go",
        "environment_http_proxy.go",
        "environment_jks_keystore_file.go",
        "environment_ssl_cert_file.go",
        "environment_tmp_dirs.go",
        "flags_listener.go",
        "flags_manifest.go",
    ],
    importpath = "github.com/continusec/htvend/internal/htvend",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/app",
        "//internal/blobstore",
        "//internal/blobstore/directory",
        "//internal/blobstore/registry",
        "//internal/blobstore/s3store",
        "//internal/jobs",
        "//internal/lockfile",
        "//internal/proxyserver",
        "//internal/re",
        "//internal/registryauthclient",
        "@com_github_adrg_xdg//:xdg",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_sslmate_software_src_go_pkcs12//:go-pkcs12",
    ],
)
