load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3store",
    srcs = ["s3_store.go"],
    importpath = "github.com/continusec/htvend/internal/blobstore/s3store",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/blobstore",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2//aws/transport/http",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
    ],
)
